Fix vertically divided grid spacing in top row

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -1046,11 +1046,19 @@
   margin-bottom: 0em;
 }
 
+
+
 /* No divider on first column on row */
 .ui.divided.grid:not([class*="vertically divided"]) > .column:first-child,
 .ui.divided.grid:not([class*="vertically divided"]) > .row > .column:first-child {
   box-shadow: none;
 }
+
+/* No space on top of first row */
+.ui[class*="vertically divided"].grid > .row:first-child > .column {
+  margin-top: 0em;
+}
+
 
 /* Divided Row */
 .ui.grid > .divided.row > .column {
